--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav></nav>
       <div class="main">
         <img class='header-image' src="img/Fisayo.jpg" alt="">
-        <h1>Fisayo Aikomo</h1>
+        <h1>Fisayo</h1>
         <p>Fullstack Web Developer</p>
       </div>
     </div>
